--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@
     <h2 class="section-title">Образование</h2>
 
     <div class="edu-block">
-      <h3>Психологическое образование</h3>
-      <p>Бизнес Академия МБА Сити, психология</p>
+      <h3>Бизнес Академия «МБА СИТИ» (ООО «МИДО»)</h3>
+      <p>Диплом о профессиональной переподготовке</p>
+      <p>Направление: Психология/p>
     </div>
 
     <div class="edu-divider"></div>
