--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <div class="edu-block">
       <h3>Бизнес Академия «МБА СИТИ» (ООО «МИДО»)</h3>
       <p>Диплом о профессиональной переподготовке</p>
-      <p>Направление: Психология/p>
+      <p>Направление: Психология</p>
     </div>
 
     <div class="edu-divider"></div>
