--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
       Я создаю безопасное пространство, где можно услышать голос своей души, восстановить внутренние границы и вернуться к себе настоящему.
       <br><br>
       В практике я применяю транзактный и экзистенциальный анализы, также знания семейной психологии, методики когнитивно-поведенческой терапии, МАК и другие.
+      <br><br>
+      Являюсь консультативным членом Общероссийской Профессиональной Психотерапевтической Лиги (ОППЛ).    
     </p>
   </section>
 
