--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
     <p class="content-description">
       Работаю на стыке психики, тела и личных границ.<br>
       Помогаю пройти путь от внутреннего конфликта<br>
-      к свободе быть собой.
+      к свободе быть собой.<br> 
+      Являюсь консультативным членом<br>
+      Общероссийской Профессиональной Психотерапевтической Лиги (ОППЛ).    
     </p>
   </div>
   <div class="cta-button-wrapper">
@@ -138,8 +140,6 @@
       Я создаю безопасное пространство, где можно услышать голос своей души, восстановить внутренние границы и вернуться к себе настоящему.
       <br><br>
       В практике я применяю транзактный и экзистенциальный анализы, также знания семейной психологии, методики когнитивно-поведенческой терапии, МАК и другие.
-      <br><br>
-      Являюсь консультативным членом Общероссийской Профессиональной Психотерапевтической Лиги (ОППЛ).    
     </p>
   </section>
 
