--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <p class="content-description">
       Работаю на стыке психики, тела и личных границ.<br>
       Помогаю пройти путь от внутреннего конфликта<br>
-      к свободе быть собой.<br> 
+      к свободе быть собой.<br><br>
       Являюсь консультативным членом<br>
       Общероссийской Профессиональной Психотерапевтической Лиги (ОППЛ).    
     </p>
@@ -131,15 +131,15 @@
   <section class="about-card" id="about-card">
     <h2 class="about-name">Сауле Есенжолова</h2>
     <p class="about-text">
-      Я практикующий психолог, энергопрактик и коуч, сопровождающий людей на пути внутреннего исцеления и роста.
+           Я практикующий психолог, энергопрактик и коуч, сопровождающий людей на пути внутреннего исцеления и роста.
       <br><br>
-      Мой путь начался с глубокой личной трансформации, а затем продолжился в Индии, где я в течение 7 лет практиковала и обучалась в ЭКАМ — одном из известных духовных центров.
+           Мой путь начался с глубокой личной трансформации, а затем продолжился в Индии, где я в течение 7 лет практиковала и обучалась в ЭКАМ — одном из известных духовных центров.
       <br><br>
-      Сегодня я помогаю взрослым людям справляться с тревожностью, утратой, внутренней пустотой, семейными трудностями и потерей смысла.
+           Сегодня я помогаю взрослым людям справляться с тревожностью, утратой, внутренней пустотой, семейными трудностями и потерей смысла.
       <br><br>
-      Я создаю безопасное пространство, где можно услышать голос своей души, восстановить внутренние границы и вернуться к себе настоящему.
+           Я создаю безопасное пространство, где можно услышать голос своей души, восстановить внутренние границы и вернуться к себе настоящему.
       <br><br>
-      В практике я применяю транзактный и экзистенциальный анализы, также знания семейной психологии, методики когнитивно-поведенческой терапии, МАК и другие.
+           В практике я применяю транзактный и экзистенциальный анализы, также знания семейной психологии, методики когнитивно-поведенческой терапии, МАК и другие.
     </p>
   </section>
 
