--- a/index.html
+++ b/index.html
@@ -251,20 +251,28 @@
     </div>
 
     <div class="edu-divider"></div>
+    
+    <div class="edu-block">
+      <h3>Личная терапия</h3>
+      <p>Курсы Обучающей личной терапии</p>
+    </div>
+
+    <div class="edu-divider"></div>
 
     <div class="edu-block">
       <h3>Юридическое образование</h3>
-      <p>Московская государственная юридическая академия (МГЮА), юриспруденция</p>
+      <p>Московская государственная юридическая академия (МГЮА,2001), юриспруденция</p>
     </div>
 
     <div class="edu-divider"></div>
 
-    <div class="edu-block">
-      <h3>Личная терапия</h3>
-      <p>Обучающая личная терапия</p>
+  <div class="edu-block">
+      <h3>Математическое образование</h3>
+      <p>Калининский государственный университет (ныне ТГУ, 1991), математик</p>
     </div>
 
     <div class="edu-divider"></div>
+    
   </section>
 
   <section id="reviews">
