--- a/index.html
+++ b/index.html
@@ -140,6 +140,20 @@
            Я создаю безопасное пространство, где можно услышать голос своей души, восстановить внутренние границы и вернуться к себе настоящему.
       <br><br>
            В практике я применяю транзактный и экзистенциальный анализы, также знания семейной психологии, методики когнитивно-поведенческой терапии, МАК и другие.
+      <br><br>    
+           Моя профессиональная база включает три ключевых направления: математика, юриспруденция и психология. Это уникальное сочетание даёт мне особую глубину и структуру в работе с клиентами.
+      <br><br> 
+           Математическое образование <br>
+           Научило меня системно мыслить, видеть скрытые связи и строить логику — как внешнюю, так и внутреннюю. В работе с клиентом я часто замечаю внутренние «формулы» поведения, по которым человек живёт, и мягко помогаю их осознавать и трансформировать.
+      <br><br>    
+           Юридическое образование <br>
+           Дало мне чёткое понимание границ, структуры, ответственности. Почти 20 лет юридической практики научили меня спокойно и точно сопровождать людей в кризисных ситуациях — таких, как развод, утрата, конфликт, потеря опор. Этот опыт помогает мне глубже понимать внутренние переживания клиента, особенно в острых или правовых контекстах.
+      <br><br> 
+           Психология <br>
+           Это мой осознанный выбор зрелого возраста. Благодаря жизненному, профессиональному и духовному опыту я пришла к психологической практике как к призванию, которое соединяет всё, чему я училась — логику, закон, душу.
+      <br><br>
+           Моя сила как психолога — в сочетании глубокой эмпатии и ясной структуры. Я умею быть бережной, но точной; поддерживающей, но направляющей. <br>
+           Я слышу не только слова — я улавливаю внутреннюю логику боли, страха, растерянности — и помогаю с этим справиться.    
     </p>
   </section>
 
