--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
            Научило меня системно мыслить, видеть скрытые связи и строить логику — как внешнюю, так и внутреннюю. В работе с клиентом я часто замечаю внутренние «формулы» поведения, по которым человек живёт, и мягко помогаю их осознавать и трансформировать.
       <br><br>    
            Юридическое образование <br>
-           Дало мне чёткое понимание границ, структуры, ответственности. Почти 20 лет юридической практики научили меня спокойно и точно сопровождать людей в кризисных ситуациях — таких, как развод, утрата, конфликт, потеря опор. Этот опыт помогает мне глубже понимать внутренние переживания клиента, особенно в острых или правовых контекстах.
+           Дало мне чёткое понимание границ, структуры, ответственности. Более 15 лет юридической практики научили меня спокойно и точно сопровождать людей в кризисных ситуациях. Этот опыт помогает мне глубже понимать внутренние переживания клиента, особенно в острых или правовых контекстах.
       <br><br> 
            Психология <br>
            Это мой осознанный выбор зрелого возраста. Благодаря жизненному, профессиональному и духовному опыту я пришла к психологической практике как к призванию, которое соединяет всё, чему я училась — логику, закон, душу.
