--- a/index.html
+++ b/index.html
@@ -212,38 +212,12 @@
       <a href="#contacts" class="help-btn">Консультация</a>
     </div>
   </section>
-  <h2 class="consult-section-title" id="consult-section-title">Консультация психолога</h2>
-  <section class="consult-cards-section">
-    <div class="consult-cards">
-      <div class="consult-card">
-        <h3 class="consult-card-title">Первичная консультация</h3>
-        <p class="consult-line">Онлайн, 20 минут</p>
-        <p class="consult-subline">Бесплатно</p>
-        <a href="#contacts" class="consult-btn">Консультация</a>
-      </div>
-      <div class="consult-card">
-        <h3 class="consult-card-title">Индивидуальная консультация</h3>
-        <p class="consult-line">Онлайн, 55 минут</p>
-        <p class="consult-subline">20 000 ₸</p>
-        <p class="consult-subline-ru">4 000 ₽</p>
-        <p class="consult-subline-us">50 $</p>
-        <a href="#contacts" class="consult-btn">Консультация</a>
-      </div>
-      <div class="consult-card">
-        <h3 class="consult-card-title">Глубинная консультация</h3>
-        <p class="consult-line">Онлайн, 110 минут</p>
-        <p class="consult-subline">35 000 ₸</p>
-        <p class="consult-subline-ru">7 000 ₽</p>
-        <p class="consult-subline-us">90 $</p>
-        <a href="#contacts" class="consult-btn">Консультация</a>
-      </div>
-    </div>
-  </section>
+  
   <section id="education" class="education-section">
     <h2 class="section-title">Образование</h2>
 
     <div class="edu-block">
-      <h3>Бизнес Академия «МБА СИТИ» (ООО «МИДО»)</h3>
+      <h3>Бизнес Академия «МБА СИТИ» (ООО «МЦДО»)</h3>
       <p>Диплом о профессиональной переподготовке</p>
       <p>Направление: Психология</p>
     </div>
@@ -287,6 +261,34 @@
 
     <div class="edu-divider"></div>
     
+  </section>
+
+ <h2 class="consult-section-title" id="consult-section-title">Консультация психолога</h2>
+  <section class="consult-cards-section">
+    <div class="consult-cards">
+      <div class="consult-card">
+        <h3 class="consult-card-title">Первичная консультация</h3>
+        <p class="consult-line">Онлайн, 20 минут</p>
+        <p class="consult-subline">Бесплатно</p>
+        <a href="#contacts" class="consult-btn">Консультация</a>
+      </div>
+      <div class="consult-card">
+        <h3 class="consult-card-title">Индивидуальная консультация</h3>
+        <p class="consult-line">Онлайн, 55 минут</p>
+        <p class="consult-subline">20 000 ₸</p>
+        <p class="consult-subline-ru">4 000 ₽</p>
+        <p class="consult-subline-us">50 $</p>
+        <a href="#contacts" class="consult-btn">Консультация</a>
+      </div>
+      <div class="consult-card">
+        <h3 class="consult-card-title">Глубинная консультация</h3>
+        <p class="consult-line">Онлайн, 110 минут</p>
+        <p class="consult-subline">35 000 ₸</p>
+        <p class="consult-subline-ru">7 000 ₽</p>
+        <p class="consult-subline-us">90 $</p>
+        <a href="#contacts" class="consult-btn">Консультация</a>
+      </div>
+    </div>
   </section>
 
   <section id="reviews">
