--- a/index.html
+++ b/index.html
@@ -114,21 +114,25 @@
 
 <!-- ГЛАВНЫЙ БЛОК -->
 <div class="main-content">
-  <div class="content">
-    <p class="content-tagline">Психолог · Энергопрактик</p>
-    <h2 class="content-name">Сауле Есенжолова</h2>
-    <p class="content-description">
-      Работаю на стыке психики, тела и личных границ.<br>
-      Помогаю пройти путь от внутреннего конфликта<br>
-      к свободе быть собой.<br><br>
-      Являюсь консультативным членом<br>
-      Общероссийской Профессиональной Психотерапевтической Лиги (ОППЛ).    
-    </p>
+  <div class="content-wrapper">
+    <div class="content">
+      <p class="content-tagline">Психолог · Энергопрактик</p>
+      <h2 class="content-name">Сауле Есенжолова</h2>
+      <p class="content-description">
+        Работаю на стыке психики, тела и личных границ.<br>
+        Помогаю пройти путь от внутреннего конфликта<br>
+        к свободе быть собой.<br><br>
+        Являюсь консультативным членом<br>
+        Общероссийской Профессиональной<br>Психотерапевтической Лиги (ОППЛ).    
+      </p>
+    </div>
+    <div class="cta-button-wrapper">
+      <a href="https://wa.me/77073632430" class="cta-button">Консультация</a>
+    </div>
   </div>
-  <div class="cta-button-wrapper">
-    <a href="https://wa.me/77073632430" class="cta-button">Консультация</a>
-  </div>
-</div> <!-- main-content -->
+  <img class="photo" src="icons/IMG_0445.jpg">
+</div>
+<!-- ГЛАВНЫЙ БЛОК -->
   <section class="about-card" id="about-card">
     <h2 class="about-name">Сауле Есенжолова</h2>
     <p class="about-text">
