--- a/en/index.html
+++ b/en/index.html
@@ -114,21 +114,25 @@
 
 <!-- ГЛАВНЫЙ БЛОК -->
 <div class="main-content">
-  <div class="content">
-    <p class="content-tagline">Psychologist · Energy Practitioner</p>
-    <h2 class="content-name">Saule Esenzholova</h2>
-    <p class="content-description">
-      I work at the intersection of psyche, body, and personal boundaries.<br>
-      I help guide the path from inner conflict<br>
-      to the freedom of being yourself.<br><br>
-      A consultative member of the<br>
-      All-Russian Professional Psychotherapeutic League (OPPL).
-  </p>
+  <div class="content-wrapper">
+    <div class="content">
+      <p class="content-tagline">Psychologist · Energy Practitioner</p>
+      <h2 class="content-name">Saule Esenzholova</h2>
+        <p class="content-description">
+          I work at the intersection of psyche, body, and personal<br> boundaries.<br>
+          I help guide the path from inner conflict<br>
+          to the freedom of being yourself.<br><br>
+          A consultative member of the<br>
+          All-Russian Professional<br>Psychotherapeutic League (OPPL).
+        </p>
+    </div>
+    <div class="cta-button-wrapper">
+      <a href="https://wa.me/77073632430" class="cta-button">Book a Session</a>
+    </div>
   </div>
-  <div class="cta-button-wrapper">
-    <a href="https://wa.me/77073632430" class="cta-button">Book a Session</a>
-  </div>
-</div> <!-- main-content -->
+  <img class="photo" src="icons/IMG_0445.jpg">
+</div>
+<!-- ГЛАВНЫЙ БЛОК -->
   <section class="about-card" id="about-card">
     <h2 class="about-name">Saule Esenzholova</h2>
     <p class="about-text">
