--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
       <a href="https://wa.me/77073632430" class="cta-button">Консультация</a>
     </div>
   </div>
-  <img class="photo" src="icons/IMG_0445.jpg">
+  <img class="photo" src="icons/IMG_0444.jpg">
 </div>
 <!-- ГЛАВНЫЙ БЛОК -->
   <section class="about-card" id="about-card">
-    <h2 class="about-name">Сауле Есенжолова</h2>
+    <h2 class="about-name">Обо мне</h2>
     <p class="about-text">
            Я практикующий психолог, энергопрактик и коуч, сопровождающий людей на пути внутреннего исцеления и роста.
       <br><br>
@@ -211,7 +211,7 @@
   <section class="help-section">
     <div class="help-container">
       <div class="help-text">
-        <h2 class="help-title">Вы не обязаны проходить через это в одиночку. Просить о помощи - это проявление силы.</h2>
+        <h2 class="help-title">Вы не обязаны проходить через жизненные трудности в одиночку. Просить о помощи<br> - это проявление силы.</h2>
         <p class="help-subtitle">Ваши чувства важны. Реакции тела - не случайны. Дайте себе заботу.</p>
       </div>
       <a href="https://wa.me/77073632430" class="help-btn">Консультация</a>
