--- a/en/index.html
+++ b/en/index.html
@@ -130,11 +130,11 @@
       <a href="https://wa.me/77073632430" class="cta-button">Book a Session</a>
     </div>
   </div>
-  <img class="photo" src="icons/IMG_0445.jpg">
+  <img class="photo" src="icons/IMG_0444.jpg">
 </div>
 <!-- ГЛАВНЫЙ БЛОК -->
   <section class="about-card" id="about-card">
-    <h2 class="about-name">Saule Esenzholova</h2>
+    <h2 class="about-name">About me</h2>
     <p class="about-text">
       I am a practicing psychologist, energy practitioner, and coach who supports people on their journey of inner healing and growth.
       <br><br>
