--- a/en/index.html
+++ b/en/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.16.16/dist/css/uikit.min.css"/>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icons/logo.svg" type="image/svg" />
-  <title>Soul Point</title>
+  <title>Your Soul Point</title>
 </head>
 <body>
 
@@ -356,3 +356,4 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.16/dist/js/uikit-icons.min.js"></script>
 </body>
 </html>
+
