--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="icons/logo.svg" alt="Логотип" class="logo-img" />
       </a>
       <div class="logo-text uk-margin-left">
-        <h1 class="logo-title">Точка души</h1>
+        <h1 class="logo-title">Твоя Точка Души</h1>
         <p class="logo-subtitle">Пространство внутренней ясности</p>
       </div>
     </div>
@@ -355,4 +355,5 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.16/dist/js/uikit-icons.min.js"></script>
 </body>
 </html>
+
 
