--- a/en/index.html
+++ b/en/index.html
@@ -35,7 +35,7 @@
         <img src="icons/logo.svg" alt="Логотип" class="logo-img" />
       </a>
       <div class="logo-text uk-margin-left">
-        <h1 class="logo-title">Soul Point</h1>
+        <h1 class="logo-title">Your Soul Point</h1>
         <p class="logo-subtitle">A space for inner clarity</p>
       </div>
     </div>
@@ -356,4 +356,5 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.16/dist/js/uikit-icons.min.js"></script>
 </body>
 </html>
+
 
