--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       <!-- Язык по центру -->
       <div class="lang-switcher uk-flex-1 uk-text-center">
         <a href="https://yoursoulpoint.com" class="lang-btn">RU</a> |
-        <a href="https://yoursoulpoint.com/en/" class="lang-btn">EN</a>
+        <a href="https://yoursoulpoint.com/en/" class="lang-btn">EN</a> |
+        <a href="https://yoursoulpoint.com/kz/" class="lang-btn">KZ</a>
       </div>
 
       <!-- Крестик закрытия -->
@@ -334,7 +335,7 @@
   </section>
   <footer class="site-footer" id="contacts">
     <div class="footer-inner">
-      <p class="footer-brand">© 2025 Точка Души</p>
+      <p class="footer-brand">© 2026 Точка Души</p>
 
       <div class="footer-contacts">
         <a href="mailto:saulesoulpoint@gmail.com">saulesoulpoint@gmail.com</a>
