--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -77,7 +77,8 @@
       <!-- Язык по центру -->
       <div class="lang-switcher uk-flex-1 uk-text-center">
         <a href="https://yoursoulpoint.com" class="lang-btn">RU</a> |
-        <a href="https://yoursoulpoint.com/en/" class="lang-btn">EN</a>
+        <a href="https://yoursoulpoint.com/en/" class="lang-btn">EN</a> |
+        <a href="https://yoursoulpoint.com/kz/" class="lang-btn">KZ</a>
       </div>
 
       <!-- Крестик закрытия -->
@@ -334,7 +335,7 @@
 
 <footer class="site-footer" id="contacts">
   <div class="footer-inner">
-    <p class="footer-brand">© 2025 The Soul Point</p>
+    <p class="footer-brand">© 2026 Your Soul Point</p>
 
     <div class="footer-contacts">
       <a href="mailto:saulesoulpoint@gmail.com">saulesoulpoint@gmail.com</a>
